feat: add init wizard redirect

--- a/config.php.sample
+++ b/config.php.sample
@@ -154,6 +154,16 @@ $org_settings = get_org_settings();
 
 /**
  * ========================================
+ * 初始化導向檢查 (Initial Redirect)
+ * ========================================
+ */
+
+if (!defined('SKIP_INIT_REDIRECT')) {
+    redirect_to_init_if_needed();
+}
+
+/**
+ * ========================================
  * 辅助函数 (Helper Functions)
  * ========================================
  */
