fix: remove duplicated helpers from config sample

--- a/config.php.sample
+++ b/config.php.sample
@@ -137,100 +137,4 @@ try {
  * ========================================
  */
 
-// 获取组织设置
-function get_org_settings($org_id = DEFAULT_ORG_ID) {
-    global $pdo;
-    try {
-        $stmt = $pdo->prepare("SELECT * FROM settings WHERE org_id = ?");
-        $stmt->execute([$org_id]);
-        return $stmt->fetch() ?: [];
-    } catch (Throwable $e) {
-        return [];
-    }
-}
-
-// 获取当前组织设置
-$org_settings = get_org_settings();
-
-/**
- * ========================================
- * 初始化導向檢查 (Initial Redirect)
- * ========================================
- */
-
-if (!defined('SKIP_INIT_REDIRECT')) {
-    redirect_to_init_if_needed();
-}
-
-/**
- * ========================================
- * 辅助函数 (Helper Functions)
- * ========================================
- */
-
-if (!function_exists('generate_csrf_token')) {
-    function generate_csrf_token() {
-        if (!isset($_SESSION['csrf_token'])) {
-            $_SESSION['csrf_token'] = bin2hex(random_bytes(32));
-        }
-        return $_SESSION['csrf_token'];
-    }
-}
-
-if (!function_exists('verify_csrf_token')) {
-    function verify_csrf_token($token) {
-        return isset($_SESSION['csrf_token']) && hash_equals($_SESSION['csrf_token'], $token);
-    }
-}
-
-if (!function_exists('is_logged_in')) {
-    function is_logged_in() {
-        return isset($_SESSION['user_id']) && !empty($_SESSION['user_id']);
-    }
-}
-
-if (!function_exists('is_session_expired')) {
-    function is_session_expired() {
-        if (!isset($_SESSION['login_time'])) {
-            return true;
-        }
-        return (time() - $_SESSION['login_time']) > SESSION_TIMEOUT;
-    }
-}
-
-if (!function_exists('get_current_user_id')) {
-    function get_current_user_id() {
-        return $_SESSION['user_id'] ?? null;
-    }
-}
-
-if (!function_exists('get_current_org_id')) {
-    function get_current_org_id() {
-        return $_SESSION['org_id'] ?? DEFAULT_ORG_ID;
-    }
-}
-
-/**
- * ========================================
- * 页面加载检查 (Page Load Checks)
- * ========================================
- */
-
-if (!function_exists('is_print_page')) {
-    function is_print_page() {
-        $uri = $_SERVER['REQUEST_URI'] ?? '';
-        return strpos($uri, '/quotes/print.php') !== false;
-    }
-}
-
-if (!function_exists('get_current_page')) {
-    function get_current_page() {
-        $uri = $_SERVER['REQUEST_URI'] ?? '';
-        if (strpos($uri, '/customers/') !== false) return 'customers';
-        if (strpos($uri, '/products/') !== false) return 'products';
-        if (strpos($uri, '/services/') !== false) return 'services';
-        if (strpos($uri, '/quotes/') !== false) return 'quotes';
-        if (strpos($uri, '/settings/') !== false) return 'settings';
-        return 'quotes'; // 默认首页
-    }
-}
+require_once __DIR__ . '/helpers/functions.php';
